Fix: aos horizontal scroll

--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -11,6 +11,7 @@ body
   background-color: $color-dark
   font-family: "Rubik", Helvetica, sans-serif
   color: $color-light
+  overflow-x: hidden
 
 .container
   max-width: 1170px
